--- a/product.html
+++ b/product.html
@@ -6,8 +6,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 -->
 <!DOCTYPE html>
 <html>
-<!-- <script src='//fm-staging-us-app-cdnjs.s3.amazonaws.com/crm/6216835/5482074.js' chat='true'></script> -->
-<script src='//au.fw-cdn.com/20055417/30641.js' chat='true'></script>
+<script src='//fm-staging-us-app-cdnjs.s3.amazonaws.com/crm/6216835/5482074.js' chat='true'></script>
+<!-- <script src='//au.fw-cdn.com/20055417/30641.js' chat='true'></script> -->
 <title>Shopin A Ecommerce Category Flat Bootstrap Responsive Website Template | Products :: w3layouts</title>
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 <!-- Custom Theme files -->
