--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <html>
 <head>
 
-<script src='//au.fw-cdn.com/20055417/30641.js' chat='true'></script>
+<script src='//fw-cdn.com/1258492/2289201.js' chat='true'></script>
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 <!-- Custom Theme files -->
 <!--theme-style-->
