--- a/product.html
+++ b/product.html
@@ -6,7 +6,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 -->
 <!DOCTYPE html>
 <html>
-<script src='//fw-cdn.com/1258492/2289201.js' chat='true'></script>
+	
+<script src='https://fw-cdn.com/1099208/2168400.js' chat='true'></script>
 <title>Shopin A Ecommerce Category Flat Bootstrap Responsive Website Template | Products :: w3layouts</title>
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 <!-- Custom Theme files -->
