--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <head>
 
 <!-- <script src='//fw-cdn.com/1258492/2289201.js' chat='true'></script> -->
-<script src='//fm-staging-us-app-cdnjs.s3.amazonaws.com/crm/400099211/60302.js' chat='true'></script>
+<script src='https://fw-cdn.com/1099208/2168400.js' chat='true'></script>
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 <!-- Custom Theme files -->
 <!--theme-style-->
