--- a/product.html
+++ b/product.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html>
 	
-<script src='https://fw-cdn.com/1099208/2168400.js' chat='true'></script>
+<script src='undefined/6463544/5649056.js' chat='true'></script>
 <title>Shopin A Ecommerce Category Flat Bootstrap Responsive Website Template | Products :: w3layouts</title>
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 <!-- Custom Theme files -->
