--- a/form2.html
+++ b/form2.html
@@ -1,7 +1,6 @@
 <html>
   <head>
     <title>Product overview Webinar | Freshmarketer</title>
-    <script src='//fm-staging-us-app-cdnjs.s3.amazonaws.com/crm/6216835/5482074.js' chat='true'></script>
   </head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style type="text/css">
@@ -73,5 +72,15 @@
         </form>
       </div>
     </section>
+    <script>
+        // mimic asynchronous upload of cdn script behaviour here with setTimeout func()
+    setTimeout(() =>
+    {
+    var a=document.createElement("script");
+    a.type="text/javascript";a.src='//fm-staging-us-app-cdnjs.s3.amazonaws.com/crm/700102601/35200.js';
+    a.setAttribute("chat","false");
+    document.getElementsByTagName("head")[0].appendChild(a)
+    }, 3000);
+    </script>
   </body>
 </html>
