--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html>
 <head>
-<script src='//fm-staging-us-app-cdnjs.s3.amazonaws.com/crm/6216835/5482074.js' chat='true'></script>
+<script src=‘//fm-staging-us-app-cdnjs.s3.amazonaws.com/6502816/5672515.js’></script>
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 <!-- Custom Theme files -->
 <!--theme-style-->
