--- a/product.html
+++ b/product.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html>
 	
-<script src='//fm-staging-us-app-cdnjs.s3.amazonaws.com/800120201/32700.js'></script>
+<script src='//fm-staging-us-app-cdnjs.s3.amazonaws.com/crm/800114201/26300.js' chat='true'></script>
 <title>Shopin A Ecommerce Category Flat Bootstrap Responsive Website Template | Products :: w3layouts</title>
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 <!-- Custom Theme files -->
