--- a/checkout.html
+++ b/checkout.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html>
 <head>
-<script src='//fm-staging-us-app-cdnjs.s3.amazonaws.com/crm/700108106/53902.js' chat='true'></script>
+<script src='//fm-staging-us-app-cdnjs.s3.amazonaws.com/700124303/74004.js'></script>
 <title>Shopin A Ecommerce Category Flat Bootstrap Responsive Website Template | Checkout :: w3layouts</title>
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 <!-- Custom Theme files -->
