--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html>
 <head>
-<script src='//fm-staging-us-app-cdnjs.s3.amazonaws.com/800101506/11803.js'></script>
+<script src='//fm-staging-us-app-cdnjs.s3.amazonaws.com/crm/6512346/5678170.js' chat='true'></script>
 <script>
 function customEvent(){
 window.zargetAPI = window.zargetAPI || [];
