--- a/product.html
+++ b/product.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html>
 	
-<script src='//fw-cdn.com/1930147/2717196.js' chat='true'></script>
+<script src='//fm-staging-us-app-cdnjs.s3.amazonaws.com/6635021/5803568.js'></script>
 <title>Shopin A Ecommerce Category Flat Bootstrap Responsive Website Template | Products :: w3layouts</title>
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 <!-- Custom Theme files -->
