--- a/product.html
+++ b/product.html
@@ -8,7 +8,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <html>
 	
 <script
-src='//fm-staging-us-app-cdnjs.s3.amazonaws.com/crm/6216835/5482074.js'
+src='//fm-staging-us-app-cdnjs.s3.amazonaws.com/crm/800125101/38400.js'
 chat='true'>
 </script>
 <title>Shopin A Ecommerce Category Flat Bootstrap Responsive Website Template | Products :: w3layouts</title>
