--- a/form1.html
+++ b/form1.html
@@ -1,8 +1,9 @@
 <html>
   <head>
     <title>Product overview Webinar | Freshmarketer</title>
-    <script
-src='//fm-staging-us-app-cdnjs.s3.amazonaws.com/crm/800126302/39402.js'
+</script>
+  <script
+src='//fm-staging-us-app-cdnjs.s3.amazonaws.com/crm/800127601/40400.js'
 chat='true'>
 </script>
   </head>
