--- a/form1.html
+++ b/form1.html
@@ -2,10 +2,7 @@
   <head>
     <title>Product overview Webinar | Freshmarketer</title>
 </script>
-  <script
-src='//fm-staging-us-app-cdnjs.s3.amazonaws.com/crm/800127601/40400.js'
-chat='true'>
-</script>
+  <script src='//fm-staging-us-app-cdnjs.s3.amazonaws.com/800132101/45300.js'></script>
   </head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style type="text/css">
