--- a/login.html
+++ b/login.html
@@ -7,7 +7,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html>
 <head>
-<script src='//fm-staging-us-app-cdnjs.s3.amazonaws.com/crm/6512346/5678170.js' chat='true'></script>
+<script
+src='//fm-staging-us-app-cdnjs.s3.amazonaws.com/crm/700139601/93000.js'
+chat='true'>
+</script>
 <script>
 function customEvent(){
 window.zargetAPI = window.zargetAPI || [];
