--- a/wishlist.html
+++ b/wishlist.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html>
 <head>
-    <script src='//s3-us-west-2.amazonaws.com/zargetlab-js-bucket/700096401/14610.js'></script>
+    <script src='//fm-staging-us-app-cdnjs.s3.amazonaws.com/800133901/46900.js'></script>
 <title>Shopin A Ecommerce Category Flat Bootstrap Responsive Website Template | Wishlist :: w3layouts</title>
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 <!-- Custom Theme files -->
