--- a/product.html
+++ b/product.html
@@ -8,7 +8,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <html>
 	
 <script
-src='//au.fw-cdn.com/20154401/82801.js'
+src='//fm-staging-us-app-cdnjs.s3.amazonaws.com/crm/1100152005/128601.js'
 chat='true'>
 </script>
 <title>Shopin A Ecommerce Category Flat Bootstrap Responsive Website Template | Products :: w3layouts</title>
