--- a/product.html
+++ b/product.html
@@ -6,6 +6,16 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 -->
 <!DOCTYPE html>
 <html>
+<head>
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-W0Z9J9SW5B"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-W0Z9J9SW5B');
+</script>
 	
 <script
 src='//fm-staging-us-app-cdnjs.s3.amazonaws.com/crm/1100152005/128601.js'
