--- a/product.html
+++ b/product.html
@@ -18,8 +18,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 </script>
 	
 <script
-src='//fm-staging-us-app-cdnjs.s3.amazonaws.com/crm/1100152005/128601.js'
-chat='true'>
+src='//fm-staging-us-app-cdnjs.s3.amazonaws.com/crm/700158325/100607.js'
+chat='false'>
 </script>
 <title>Shopin A Ecommerce Category Flat Bootstrap Responsive Website Template | Products :: w3layouts</title>
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
