--- a/product.html
+++ b/product.html
@@ -8,7 +8,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <html>
 <head>
 	<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-W0Z9J9SW5B"></script>
+<script
+src='//fm-staging-us-app-cdnjs.s3.amazonaws.com/crm/7611586/6439838.js'
+chat='true'>
+</script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
