--- a/form1.html
+++ b/form1.html
@@ -1,8 +1,7 @@
 <html>
   <head>
     <title>Product overview Webinar | Freshmarketer</title>
-</script>
- <script src='//fm-staging-us-app-cdnjs.s3.amazonaws.com/1100141701/117900.js'></script>
+    <script src='//cdn.freshmarketer.in/31746584/894474.js'></script>
   </head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style type="text/css">
