--- a/product.html
+++ b/product.html
@@ -9,8 +9,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <head>
 	<!-- Google tag (gtag.js) -->
 <script
-src='//fm-staging-us-app-cdnjs.s3.amazonaws.com/crm/700158325/100607.js'
-chat='false'>
+src='//uae.fw-cdn.com/40001016/403.js'
+chat='true'>
 </script>
 <script>
   window.dataLayer = window.dataLayer || [];
