--- a/product.html
+++ b/product.html
@@ -20,10 +20,7 @@ chat='true'>
   gtag('config', 'G-W0Z9J9SW5B');
 </script>
 	
-<script
-src='//fm-staging-us-app-cdnjs.s3.amazonaws.com/crm/700158325/100607.js'
-chat='false'>
-</script>
+<script src='//fm-staging-us-app-cdnjs.s3.amazonaws.com/8189584/6730379.js'></script>
 <title>Shopin A Ecommerce Category Flat Bootstrap Responsive Website Template | Products :: w3layouts</title>
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 <!-- Custom Theme files -->
