--- a/form3.html
+++ b/form3.html
@@ -20,9 +20,9 @@
       
 
       var userValues = {
-"Email address":" value_to_be_replaced",
-"First name":" value_to_be_replaced",
-"Last name":" value_to_be_replaced"};
+"Email address":email,
+"First name": fname,
+"Last name": lname};
 window.FMApi = window.FMApi || []; window.FMApi.push("fm_form_tracking", "85FF04528676F1F10FF028A62FD350897E4993577BF5C015D8C265ACB3CDA1B0CAA4CEFC3E54F831AED6A4C40841D5584AACA724277AB9ADD731FC8B57279E72CC6E29775A08583F6BFDCA6E90833BA5", userValues);
 
       setTimeout(() => {
