--- a/product.html
+++ b/product.html
@@ -9,7 +9,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <head>
 	<!-- Google tag (gtag.js) -->
 <script
-src='//uae.fw-cdn.com/40001016/403.js'
+src='//fm-staging-us-app-cdnjs.s3.amazonaws.com/crm/700182462/128613.js'
 chat='true'>
 </script>
 <script>
